# bovine-aptesting

./: .gitignore  .gitmodules  README.md  pyproject.toml
bovine_aptesting/: config.toml  conftest.py  server.py  support.py  test_platform.py
