[tool.poetry]
name = "bovine-aptesting"
version = "0.1.0"
description = ""
authors = ["Steve Bate <svc-github@stevebate.net>"]
readme = "README.md"
packages = [{ include = "bovine_aptesting" }]

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.18.4"
bovine = { path = "submodules/bovine/bovine", develop = true }
bovine-store = { path = "submodules/bovine/bovine_store", develop = true }
bovine-herd = { path = "submodules/bovine/bovine_herd", develop = true }
activitypub-testsuite = {path = "../activitypub-testsuite", develop = true}


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "steve"
url = "http://nas.lan:3000/api/packages/steve/pypi/simple/"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
ruff = "^0.0.284"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["-W", "ignore::DeprecationWarning", "--ignore", "submodules"]
markers = [
    "ap_reqlevel: ActivityPub requirements level",
    "ap_capability: ActivityPub/AS2 capability required for test",
]
